WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
236450
Crash in WebCore::CSSStyleSheet::didMutateRules
https://bugs.webkit.org/show_bug.cgi?id=236450
Summary
Crash in WebCore::CSSStyleSheet::didMutateRules
Gabriel Nava Marino
Reported
2022-02-10 10:05:32 PST
<
rdar://problem/88323864
>
Attachments
Patch
(2.16 KB, patch)
2022-02-10 10:09 PST
,
Gabriel Nava Marino
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gabriel Nava Marino
Comment 1
2022-02-10 10:09:09 PST
Created
attachment 451561
[details]
Patch
Gabriel Nava Marino
Comment 2
2022-02-10 10:14:12 PST
***
Bug 236384
has been marked as a duplicate of this bug. ***
EWS
Comment 3
2022-02-10 12:24:55 PST
Committed
r289567
(
247087@main
): <
https://commits.webkit.org/247087@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 451561
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug