Crash in in WebCore::CSSStyleSheet::didMutateRules https://bugs.webkit.org/show_bug.cgi?id=236450

Patch by Gabriel Nava Marino <gnavamarino@apple.com> on 2022-02-10
Reviewed by Antti Koivisto.

Replace the raw pointer rule in RuleMutationScope with a RefPtr so it can be accessible
for the scope.

* css/CSSStyleSheet.cpp:
(WebCore::CSSStyleSheet::RuleMutationScope::~RuleMutationScope):
* css/CSSStyleSheet.h:


Canonical link: https://commits.webkit.org/247087@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289567 268f45cc-cd09-0410-ab3c-d52691b4dbfc